kubernetes/apps/ai/ollama/app/httproute-ollama.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: cilium
  name: ollama
  namespace: network
spec:
  hostnames:
  - ollama.${EXTERNAL_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-gateway
    namespace: network
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ollama-ui
      namespace: network
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
